src/index.css
/* ... */
.edit-section input:focus,
.edit-section textarea:focus {
  border: 1px solid rgba(255, 255, 255, 0.4);
}

.edit-section input {
  height: 40px;
}

.edit-section textarea {
  resize: none;
  width: 100%;
  height: 100%;
}

.model-container .guildlines,
.guildlines {
  font-size: 0.8rem;
  margin-top: 20px;
}

.save-playlist {
  margin-top: 24px;
}

.userprofile {
  display: flex;
  gap: 20px;
  align-items: center;
  justify-content: center;
}

.userprofile img {
  width: 3rem;
  height: 3rem;
  border-radius: 50%;
  object-fit: cover;
}

.index-button {
  color: white;
  width: 32px;
  height: 32px;
  border: 1px solid black;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 5px;
  cursor: pointer;
  user-select: none;
  background-color: rgba(0, 0, 0, 0.8);
}

.index-button:hover {
  background-color: rgba(0, 0, 0, 1);
}

.carosel {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 8px;
  gap: 10px;

  position: absolute;
  bottom: 15px;
  left: 20px;
}

.carosel div {
  width: 10px;
  height: 10px;
  border-radius: 50%;
  background-color: rgba(255, 255, 255, 0.6);
  cursor: pointer;
}

.carosel div.active {
  background-color: var(--highlight);
}

.carosel div:hover {
  background-color: white;
}

/* Fading animation */

.swiper-class {
  position: relative;
  user-select: none;
}

.swiper-btn {
  width: 32px;
  height: 32px;

  position: absolute;
  z-index: 999;
  top: 40%;
  transform: translateY(-50%);
  border-radius: 50%;
  padding: 5px;
  background-color: white;

  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  opacity: 0;

  transition: opacity 0.5s ease-in-out;
  visibility: hidden;
}

.swiper-btn.deactivate {
  background-color: rgba(255, 255, 255, 0.6);
  cursor: default;
}

.swiper-class:hover .swiper-btn {
  opacity: 1;
  visibility: visible;
}

.swipe-artists-btn {
  border-radius: 5px;
}

.swiper-btn * {
  width: 100%;
  height: 100%;
}

.swipe-prev,
.swipe-prev-artists {
  left: -15px;
}

.swipe-next,
.swipe-next-artists {
  right: 10px;
}

/* test */

.music-bars {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 0.5rem;
  height: 100%;
  transform: scale(0.5);
}

.bar-container {
  position: relative;
  width: 0.5rem;
}

.bar {
  width: 0.5rem;
  background: var(--tertiary);
  position: absolute;
  bottom: 0;
}

#bar-1 {
  animation: 1s ease-out infinite both play;
}

#bar-2 {
  animation: 1s ease-out 0.5s infinite both play;
}

#bar-3 {
  animation: 1s ease-out 0.2s infinite both play;
}

#bar-4 {
  animation: 1s ease-out 0.75s infinite both play;
}

.volume-popover {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 10px;
  width: 40px;
}

.css-1f3lzk4-MuiPaper-root-MuiPopover-paper {
  overflow: visible !important;
}

/* Login Page */
.log-container {
  background-color: #222;
  min-height: 100vh;
  height: 100%;
}

.land-log {
  width: 90vw;
  min-height: 100vh;
  height: 100%;
  display: grid;
  grid-template-columns: 1fr 1fr;
  color: #fefefe;
  margin: 0 auto;
  position: relative;
}

.land-log .art-section {
  display: flex;
  justify-content: center;
  align-items: center;
}

.land-log .form-section {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100%;
  font-family: "Raleway", sans-serif;
  font-weight: 600;
}

.land-log .form {
  min-width: 22rem;
}

.log-container .nav-section {
  position: fixed;
  display: flex;
  justify-content: space-between;
  width: 100%;
  padding: 2rem 2.5rem;
  z-index: 1000;
}

.log-container .nav-section .logo {
  margin: 0;
}

/* Login Form Start */
.land-log .form .title {
  font: normal 500 48px "Roboto";
  letter-spacing: 0.02em;
  color: #fefefe;
}

.land-log .form .title.custom-title {
  font: normal 500 32px "Roboto";
  color: #fefefe;
}

.land-log .form .subtitle {
  font-weight: 400;
  font-size: 14px;
  color: rgba(254, 254, 254, 0.5);
}

.land-log .form .input-field {
  margin: 1.2rem auto;
}

.land-log .form .input-field label {
  display: block;
  margin-bottom: 0.75rem;
  color: #fefefe;
}

.land-log .form .input-field input {
  height: 2.5rem;
  width: 100%;
  padding-left: 12px;
  font-size: 13px;
  background: rgba(255, 255, 255, 0.1);
  border: 1px solid rgba(215, 215, 215, 0.1);
  box-shadow: 0px 1px 1px rgba(255, 255, 255, 0.06);
  border-radius: 8px;
  color: #fefefe;
}

.land-log .form .input-field input::placeholder {
  color: #989292;
}

.input-icon-container {
  position: relative;
}

.land-log .input-icon-container .eye-btn {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  right: 10px;
  vertical-align: middle;
  cursor: pointer;
  user-select: none;
}

.land-log .form .section {
  width: 100%;
  display: flex;
  justify-content: flex-end;
  font-size: 13px;
}

.land-log .login-btn {
  margin: 10px 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 10px;
}

.land-log .login-btn button {
  padding: 12px 24px;
  width: 100%;
  height: 48px;
  color: #fefefe;
  box-shadow: 0px 1px 1px rgba(255, 255, 255, 0.06);
  border-radius: 8px;
  cursor: pointer;
  outline: none;
  border: none;
}

.land-log .form .login__btn {
  background: var(--highlight);
}

.land-log .form .login__google {
  background: rgba(255, 255, 255, 0.1);
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 10px;
}

.login__google .icon {
  font-size: 1.2rem;
}

.land-log .form .account {
  text-align: center;
  font-family: "Poppins", sans-serif;
  font-size: 12px;
}

.featured-heart {
  width: 40px;
  height: 40px;
  padding: 10px;
  color: var(--highlight);
  stroke: var(--highlight);
  background-color: rgba(0, 0, 0, 0.6);
  margin-left: 15px;
  border-radius: 50%;
  cursor: pointer;
}

